load("//tools:defaults.bzl", "pkg_npm", "ts_library")

ts_library(
    name = "tslint-rules",
    srcs = glob(["*.ts"]),
    module_name = "@angular/dev-infra-private/tslint-rules",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "@npm//tslint",
        "@npm//typescript",
    ],
)

pkg_npm(
    name = "npm_package",
    build_package_json_from_template = True,
    deps = [
        ":tslint-rules",
    ],
)
