load("//tools:defaults.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["*.ts"]),
    visibility = ["//:npm"],
    deps = [
        "@npm//tslint",
        "@npm//typescript",
    ],
)

filegroup(
    name = "static_files",
    srcs = ["tsNodeLoaderRule.js"],
    visibility = ["//:npm"],
)
