load("//tools:defaults.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["*.ts"]),
    # Note: TSLint rules need to be written in CommonJS.
    devmode_module = "commonjs",
    visibility = ["//:npm"],
    deps = [
        "@npm//tslint",
        "@npm//typescript",
    ],
)

filegroup(
    name = "static_files",
    srcs = ["tsNodeLoaderRule.js"],
    visibility = ["//:npm"],
)
