load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//api-gen:__subpackages__"])

ts_library(
    name = "render_api_to_html_lib",
    srcs = glob(["**/*.ts"]),
    devmode_module = "commonjs",
    deps = [
        "@npm//@bazel/runfiles",
        "@npm//@types/marked",
        "@npm//@types/node",
        "@npm//@types/nunjucks",
        "@npm//marked",
        "@npm//nunjucks",
    ],
)

# nunjucks templates for generating API reference docs.
filegroup(
    name = "templates",
    srcs = glob(["templates/*.njk"]),
)

# Action binary for the api_gen bazel rule.
nodejs_binary(
    name = "render_api_to_html",
    data = [
        ":render_api_to_html_lib",
        ":templates",
    ],
    entry_point = "//api-gen/rendering:index.ts",
    # Do not use the NodeJS linker because:
    #  - it's brittle and causes race conditions on Windows.
    #  - it requires additional work to setup the runtime linker.
    templated_args = ["--bazel_patch_module_resolver"],
)
