load("//tools:defaults.bzl", "copy_to_bin", "esbuild", "ng_project", "npm_sass_library", "sass_binary")

package(default_visibility = ["//apps/code-of-conduct:__subpackages__"])

ng_project(
    name = "main",
    srcs = [
        "environment.ts",
        "main.ts",
    ],
    deps = [
        "//:node_modules/@angular/common",
        "//:node_modules/@angular/compiler",
        "//:node_modules/@angular/fire",
        "//:node_modules/@angular/platform-browser",
        "//:node_modules/@angular/router",
        "//:node_modules/zone.js",
        "//apps/code-of-conduct/app",
        "//apps/code-of-conduct/app:app_routes",
    ],
)

npm_sass_library(
    name = "angular_material_sass_deps",
    deps = [
        "//:node_modules/@angular/cdk",
        "//:node_modules/@angular/material",
    ],
)

sass_binary(
    name = "styles",
    src = "styles.scss",
    deps = [
        ":angular_material_sass_deps",
    ],
)

esbuild(
    name = "bundle",
    srcs = [
        ":main",
    ],
    entry_points = [":main.js"],
    platform = "browser",
    target = "es2022",
)

copy_to_bin(
    name = "application_files",
    srcs = [
        "favicon.ico",
        "index.html",
        "robots.txt",
        ":bundle",
        ":styles",
    ],
    visibility = ["//apps:__pkg__"],
)
