load("//tools:defaults2.bzl", "copy_to_bin", "esbuild", "ts_project")

package(default_visibility = ["//visibility:private"])

copy_to_bin(
    name = "functions_files",
    srcs = [
        "package.json",
        ":bundle",
        "//:node_modules/firebase-tools",
    ],
    visibility = ["//apps:__pkg__"],
)

ts_project(
    name = "functions",
    srcs = [
        "index.ts",
    ],
    deps = [
        "//:node_modules/firebase-admin",
        "//apps/functions/code-of-conduct:code-of-conduct_rjs",
        "//apps/functions/dns-redirecting:dns-redirecting_rjs",
    ],
)

esbuild(
    name = "bundle",
    srcs = [
        ":functions_rjs",
        "//:node_modules/firebase-functions",
    ],
    entry_point = "index.ts",
    format = "cjs",
    platform = "node",
    visibility = ["//apps:__pkg__"],
)
