load("@devinfra_npm//:defs.bzl", "npm_link_all_packages")
load("//tools:defaults.bzl", "copy_to_bin", "esbuild", "ts_project")

package(default_visibility = ["//visibility:private"])

npm_link_all_packages()

copy_to_bin(
    name = "functions_files",
    srcs = [
        "package.json",
        ":bundle",
        "//apps/functions:node_modules/firebase-tools",
    ],
    visibility = ["//apps:__pkg__"],
)

ts_project(
    name = "functions",
    srcs = [
        "index.ts",
    ],
    deps = [
        "//apps/functions:node_modules/firebase-admin",
        "//apps/functions/code-of-conduct",
        "//apps/functions/dns-redirecting",
    ],
)

esbuild(
    name = "bundle",
    srcs = [
        ":functions",
        "//apps/functions:node_modules/firebase-functions",
    ],
    entry_point = "index.ts",
    format = "cjs",
    platform = "node",
    visibility = ["//apps:__pkg__"],
)
