load("@devinfra_npm//:defs.bzl", "npm_link_all_packages")
load("//tools:defaults.bzl", "copy_to_bin", "esbuild", "ts_project")

package(default_visibility = ["//visibility:private"])

npm_link_all_packages()

# TODO: Figure out a different way to deal with the file linking issues.
genrule(
    name = "fixed_bundle",
    srcs = [":raw_bundle"],
    outs = ["bundle.js"],
    cmd = """
    for f in $(locations :raw_bundle); do
      if [[ $$f == *.js ]]; then
        cp $$f $@
        break
      fi
    done
    chmod +w $@
    sed -i 's/(0, import_node_module\\.createRequire)(import_meta\\.url)/(0, import_node_module.createRequire)(__filename)/g' $@
    sed -i -E 's/import_([a-zA-Z0-9_]+)\\.default/(import_\\1.default || import_\\1)/g' $@
    """,
)

copy_to_bin(
    name = "functions_files",
    srcs = [
        "package.json",
        ":fixed_bundle",
        "//apps/functions:node_modules/firebase-tools",
    ],
    visibility = ["//apps:__pkg__"],
)

ts_project(
    name = "functions",
    srcs = [
        "index.ts",
    ],
    deps = [
        "//apps/functions:node_modules/firebase-admin",
        "//apps/functions/code-of-conduct",
        "//apps/functions/dns-redirecting",
    ],
)

esbuild(
    name = "raw_bundle",
    srcs = [
        ":functions",
        "//apps/functions:node_modules/firebase-functions",
    ],
    entry_point = "index.ts",
    format = "cjs",
    platform = "node",
    visibility = ["//apps:__pkg__"],
)
