load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "index.ts",
    "index_npm_packages.ts",
])

ts_project(
    name = "api-golden",
    srcs = [
        "find_entry_points.ts",
        "index_npm_packages.ts",
        "module_mappings.ts",
        "patch-host.ts",
        "path-normalize.ts",
        "test_api_report.ts",
    ],
    tsconfig = "//bazel:tsconfig",
    deps = [
        "//bazel:node_modules/@microsoft/api-extractor",
        "//bazel:node_modules/@types/node",
        "//bazel:node_modules/typescript",
    ],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["*"]),
)
