load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files([
    "index.ts",
    "index_npm_packages.cts",
    "package.json",
])

ts_project(
    name = "api-golden",
    srcs = [
        "find_entry_points.ts",
        "index_npm_packages.cts",
        "path-normalize.ts",
        "test_api_report.ts",
    ],
    declaration = True,
    tsconfig = "//bazel:tsconfig",
    deps = [
        "//bazel:node_modules/@microsoft/api-extractor",
        "//bazel:node_modules/@types/node",
        "//bazel:node_modules/piscina",
        "//bazel:node_modules/typescript",
    ],
)
