package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "//bazel/benchmark/app_bundling:files",
        "//bazel/benchmark/brotli-cli:files",
        "//bazel/benchmark/component_benchmark:files",
        "//bazel/benchmark/driver-utilities:files",
    ],
)
