load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

exports_files(["launcher_template.sh"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]),
)

ts_project(
    name = "server_lib",
    srcs = [
        "ibazel.mts",
        "main.mts",
        "server.mts",
    ],
    tsconfig = "//bazel:tsconfig",
    deps = [
        "//bazel:node_modules/@types/browser-sync",
        "//bazel:node_modules/@types/node",
        "//bazel:node_modules/@types/send",
        "//bazel:node_modules/@types/yargs",
        "//bazel:node_modules/browser-sync",
        "//bazel:node_modules/send",
        "//bazel:node_modules/yargs",
    ],
)

js_binary(
    name = "server_bin",
    data = [":server_lib"],
    entry_point = ":main.mjs",
)
