load("@npm//@bazel/concatjs:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//bazel/esbuild:index.bzl", "esbuild_esm_bundle")

package(default_visibility = ["//bazel/markdown_to_html:__subpackages__"])

esbuild_esm_bundle(
    name = "bin",
    entry_point = ":index.ts",
    external = [
        "marked",
    ],
    output = "bin.mjs",
    platform = "node",
    target = "es2022",
    deps = [
        ":markdown_to_html_lib",
    ],
)

ts_library(
    name = "markdown_to_html_lib",
    srcs = glob(["**/*.ts"]),
    devmode_module = "commonjs",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@bazel/runfiles",
        "@npm//@types/node",
        "@npm//marked",
    ],
)

# Action binary for the api_gen bazel rule.
nodejs_binary(
    name = "markdown_to_html",
    data = [
        ":bin",
        "@npm//marked",
    ],
    entry_point = "bin.mjs",
    # Note: Using the linker here as we need it for ESM. The linker is not
    # super reliably when running concurrently on Windows- but we have existing
    # actions using the linker. An alternative would be to:
    #   - bundle the Angular compiler into a CommonJS bundle
    #   - use the patched resolution- but also patch the ESM imports (similar to how FW does it).
    visibility = ["//visibility:public"],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
