load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/concatjs:index.bzl", "ts_library")

package(default_visibility = ["//bazel/markdown_to_html:__subpackages__"])

ts_library(
    name = "markdown_to_html_lib",
    srcs = glob(["**/*.ts"]),
    devmode_module = "commonjs",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@bazel/runfiles",
        "@npm//@types/node",
        "@npm//marked",
    ],
)

# Action binary for the api_gen bazel rule.
nodejs_binary(
    name = "markdown_to_html",
    data = [":markdown_to_html_lib"],
    entry_point = ":index.ts",
    templated_args = [
        "--bazel_patch_module_resolver",
    ],
    visibility = ["//visibility:public"],
)

# Expose the sources in the dev-infra NPM package.
filegroup(
    name = "files",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
