load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
load("//bazel:extract_types.bzl", "extract_types")

ts_project(
    name = "transitive_lib",
    testonly = True,
    srcs = ["transitive_file.ts"],
    declaration = True,
    tsconfig = "//bazel:tsconfig",
)

ts_project(
    name = "test_lib",
    testonly = True,
    srcs = ["fixture.ts"],
    declaration = True,
    tsconfig = "//bazel:tsconfig",
    deps = [":transitive_lib"],
)

filegroup(
    name = "text_fixture",
    testonly = True,
    srcs = ["fixture.txt"],
)

extract_types(
    name = "extract_types_target",
    testonly = True,
    deps = [":test_lib"],
)

nodejs_test(
    name = "extract_types_test",
    data = [":extract_types_target"],
    entry_point = "extract_types_test.js",
    templated_args = ["$(rootpaths :extract_types_target)"],
)
