load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//bazel:extract_types.bzl", "extract_types")

ts_project(
    name = "transitive_lib",
    testonly = True,
    srcs = ["transitive_file.ts"],
    declaration = True,
    tsconfig = "//bazel:tsconfig",
)

ts_project(
    name = "test_lib",
    testonly = True,
    srcs = ["fixture.ts"],
    declaration = True,
    tsconfig = "//bazel:tsconfig",
    deps = [":transitive_lib"],
)

filegroup(
    name = "text_fixture",
    testonly = True,
    srcs = ["fixture.txt"],
)

extract_types(
    name = "extract_types_target",
    testonly = True,
    deps = [":test_lib"],
)

js_test(
    name = "extract_types_test",
    data = [":extract_types_target"],
    entry_point = "extract_types_test.js",
    fixed_args = ["$(rootpaths :extract_types_target)"],
)
